# Senzr-Video--Audio-_TRanscription-Recorder.

./: .gitignore  Comparison Report.docx  README.md  benchmark.cpp  benchmark.py  benchmark.txt  cpp_benchmark.txt  focus_preview.py  nano  requirements.txt  test_camera_smoke.py  test_mic.py  updater.py
backend/: __init__.py  app.py  database.py  logger_utils.py  main.py  requirements.txt
backend/api/: __init__.py  inference.py  status.py  wifi.py
backend/services/: __init__.py  generate_configs.py  inference_service.py  platform_service.py  system_service.py  wifi_service.py
backend/templates/: index.html
configs/: app_config.json  camera_state.json  device-config.json  dnsmasq.conf  hostapd.conf  runtime_state.json  wifi_state.json
configs/templates/: dnsmasq.conf.template  hostapd.conf.template  nginx-edge-gateway.conf.template
cpp/: CMakeLists.txt
cpp/frontend/: app.js  index.html  style.css
cpp/include/app/: api_server.hpp  config_manager.hpp  database.hpp  logger_utils.hpp  models.hpp
cpp/include/session_pipeline/: audio_capture.hpp  events.hpp  person_detection.hpp  queues.hpp  recorder_manager.hpp  run_session_pipeline.hpp  session.hpp  session_manager.hpp  transcriber.hpp  uploader.hpp
cpp/src/: benchmark.cpp  main.cpp
cpp/src/app/: api_server.cpp  config_manager.cpp  database.cpp  logger_utils.cpp  models.cpp
cpp/src/session_pipeline/: audio_capture.cpp  recorder_manager.cpp  run_session_pipeline.cpp  session.cpp  session_manager.cpp  transcriber.cpp  uploader.cpp
current/: requirements.txt
current/backend/: alsa_controls.txt  camera_detection.py  camera_detector.py  camera_detector.py.pre_audio  camera_service.py  config_manager.py  configmanager.py  database.py  loggerutils.py  main.py  models.py  run_camera_detector.py  run_session_pipeline_main.py  test_av_session.py  test_cam_index.py  test_onboard_audio.py  test_rknn.py
current/database/: config.json
current/frontend/: app.js  index.html  style.css
database/: config.json
frontend/: app.js  index.html
frontend/public/: index.html
mocks/: camera.py  wifi.py
pi-local-backup/: s3_uploader.py
scripts/: dev_start.sh  dev_stop.sh  service_status.sh  start-gateway.sh  stop-gateway.sh
systemd/: edge-gateway-framework.service
tests/: test_mocks.py
(+27 files in other folders)
